--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-great-riders.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-great-riders.scss
@@ -1,4 +1,4 @@
-#bikes-guide {
+#best-guide, #great-ride {
     // margin-bottom: 100px;
     // margin-top: 56px;
     @include media-breakpoint-down(lg) {
@@ -7,13 +7,14 @@
         // padding-right: unset;
         margin-top: 40px;
     }
-    .great-riders {
+    .great-rides, .best-guides {
         position: relative;
-        .great-rider-img{
+        .overlap-img{
             // width: 100%;
             @include media-breakpoint-up(md) {
             //     width: 630px;
                 min-height: 500px;
+                max-height: 550px;
             }
             @include media-breakpoint-down(lg) {
                 padding-left: unset;
@@ -23,7 +24,10 @@
                 // position: absolute;
                 width: 100%;
                 height: 100%;
+                min-height: 500px;
                 object-fit: cover;
+                // object-position: top 15% right 0px;
+                
                 @include media-breakpoint-down(lg) {
                     position: unset;
                     width: 100%;
@@ -34,7 +38,7 @@
             
             }
         }
-        .great-rider {
+        .overlap-text {
             width: 433px;
             background: $black;
             border-bottom: 4px solid $black;
@@ -63,14 +67,14 @@
                 width: 90%;
                 height: auto;
                 padding: 32px 24px;
-                margin-top: -35%;
+                margin-top: -25%;
             }
             @include media-breakpoint-down(md) {
                 margin: auto;
                 width: 90%;
                 height: auto;
                 padding: 32px 24px;
-                margin-top: -20%;
+                margin-top: -18%;
             }
             @include media-breakpoint-down(sm) {
                 margin: auto;
@@ -102,7 +106,7 @@
                     line-height: 36px;
                 }
             }
-            .great-p {
+            .overlap-p {
                 font-size: $font-size-md;
                 line-height: $line-height-md;
                 margin-bottom: 24px;
