Ttucker pdp update (#417)
* no horizontal

--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -14707,6 +14707,16 @@ a.refineLink {
   }
 }
 
+.visually-hidden-focusable {
+  position: absolute;
+  left: 0; /* Ensure the element is within the viewport */
+}
+
+.elementor-screen-only {
+  position: absolute;
+  left: 0; /* Ensure the element is within the viewport */
+}
+
 .product-slider {
   position: relative;
 }
