Ttucker pdp update (#423)
* sing in register wording

* pdp all months year annd styles

* pdp hw and pdp dates styling wip

* pdp date status styles

* pdp date status styles 2

* pdp navigation desktop commented js padding

* pdp branch master merge

* hw landing structure

* hw structure and styles 1

* pdp copntainer sizing

* container sizing breakpoint

* hw landing repeater wip

* htags class color

* hw landing complete

* nocap folder

* tpl part comma

* folder rename part1

* folder rename part2

* cta blog

* cta blog ugh

* hw acf fix

* pdp itinerary icons wip

* pdp itinerary icons complete

* pdp and itinerary hw activity version changes complete

* pdp and itinerary booking form updates

* hw landing edits

* inc img cover

* PLP hw badge and hike icon

* acf btn manual link

* acf btn manual link fix

* acf btn manual link fixy

* clean print

* print goaway

* hide view bikes for all but biking

* date space between

* desktop archive activity tax and show dates only in their starting month

* foreach badge

* activity tax capital

* back to og wip

* Hiking and walking: display the green badge if there is a Hiking in the badges

* Hiking and walking: update the icon based on the trip activity

* past coming

* re-register typo

* starting price not include private status

* no print

* m sync

* no dupe entry

* bookable private date on private pdp

* mobile icon plp fix

* mobile icon plp fixed

* pdp no date pro race

* pdp no dates

* pdp no dates class

* sidebar nav

* other as companion

* itinerary days more than 13

* rides guides fix

* pdp side nav fixes

* pdp scroll

* no horizontal

* weather metric

* imp and metric

* responsive weather

---------

Co-authored-by: smetodiev@devrix.com (28172) <client_smetodiev@ohio-trektravel.vps.pagelyhosting.com>

--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -16813,6 +16813,27 @@ nav .nav-tabs .nav-link.active {
   font-size: 14px;
   line-height: 20px;
 }
+.pdp-weather__weather-table .small-text {
+  font-size: smaller;
+  color: #666;
+}
+.pdp-weather__weather-table .separator {
+  margin: 0 5px;
+}
+.pdp-weather__weather-table .unit-group {
+  display: inline-flex;
+  flex-wrap: wrap;
+  white-space: nowrap;
+}
+.pdp-weather__weather-table .unit-group > span {
+  display: inline-block;
+}
+@media (max-width: 575.98px) {
+  .pdp-weather__weather-table .unit-group > .separator, .pdp-weather__weather-table .unit-group > .small-text {
+    display: block;
+    margin-left: 0;
+  }
+}
 
 #similar-trips {
   padding: 3rem 0px 3.5rem 82px;
