Ttucker pdp update (#425)
* sing in register wording

* pdp all months year annd styles

* pdp hw and pdp dates styling wip

* pdp date status styles

* pdp date status styles 2

* pdp navigation desktop commented js padding

* pdp branch master merge

* hw landing structure

* hw structure and styles 1

* pdp copntainer sizing

* container sizing breakpoint

* hw landing repeater wip

* htags class color

* hw landing complete

* nocap folder

* tpl part comma

* folder rename part1

* folder rename part2

* cta blog

* cta blog ugh

* hw acf fix

* pdp itinerary icons wip

* pdp itinerary icons complete

* pdp and itinerary hw activity version changes complete

* pdp and itinerary booking form updates

* hw landing edits

* inc img cover

* PLP hw badge and hike icon

* acf btn manual link

* acf btn manual link fix

* acf btn manual link fixy

* clean print

* print goaway

* hide view bikes for all but biking

* date space between

* desktop archive activity tax and show dates only in their starting month

* foreach badge

* activity tax capital

* back to og wip

* Hiking and walking: display the green badge if there is a Hiking in the badges

* Hiking and walking: update the icon based on the trip activity

* past coming

* re-register typo

* starting price not include private status

* no print

* m sync

* no dupe entry

* bookable private date on private pdp

* mobile icon plp fix

* mobile icon plp fixed

* pdp no date pro race

* pdp no dates

* pdp no dates class

* sidebar nav

* other as companion

* itinerary days more than 13

* rides guides fix

* pdp side nav fixes

* pdp scroll

* no horizontal

* weather metric

* imp and metric

* responsive weather

* large responsive

---------

Co-authored-by: smetodiev@devrix.com (28172) <client_smetodiev@ohio-trektravel.vps.pagelyhosting.com>

--- a/wp-content/themes/trek-travel-theme/assets/css/main.css
+++ b/wp-content/themes/trek-travel-theme/assets/css/main.css
@@ -16789,19 +16789,21 @@ nav .nav-tabs .nav-link.active {
   }
 }
 
-@media (max-width: 767.98px) {
-  .pdp-weather__weather-table {
-    overflow-x: scroll;
-    padding: 0;
-  }
-  .pdp-weather__weather-table table tr th:first-child {
-    position: sticky;
-    left: -1px;
-    white-space: nowrap;
-  }
-  .pdp-weather__weather-table table thead tr th:first-child {
-    background-color: #000;
-  }
+.pdp-weather__weather-table {
+  overflow-x: auto;
+  padding: 0;
+}
+.pdp-weather__weather-table table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.pdp-weather__weather-table table tr th:first-child {
+  position: sticky;
+  left: -1px;
+  white-space: nowrap;
+}
+.pdp-weather__weather-table table thead tr th:first-child {
+  background-color: #000;
 }
 .pdp-weather__weather-table thead th, .pdp-weather__weather-table tbody th {
   font-size: 16px;
