--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-weather.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-weather.scss
@@ -1,24 +1,29 @@
 .pdp-weather {
     &__weather-table {
-        @include media-breakpoint-down(md) {
-            overflow-x: scroll;
-            padding: 0;
-            table {
-                tr th:first-child {
-                    position: sticky;
-                    left: -1px;
-                    white-space: nowrap;
-                }
-                thead tr th:first-child {
-                    background-color: $black;
-                }
+        overflow-x: auto;
+        padding: 0;
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+
+            tr th:first-child {
+                position: sticky;
+                left: -1px;
+                white-space: nowrap;
+            }
+
+            thead tr th:first-child {
+                background-color: $black;
             }
         }
+
         thead th, tbody th {
             font-size: 16px;
             line-height: 24px;
             font-weight: 400;
         }
+
         tbody tr th:first-child {
             background-color: $white;
             font-size: 14px;
@@ -30,17 +35,21 @@
             font-size: smaller;
             color: #666;
         }
+
         .separator {
             margin: 0 5px;
         }
+
         .unit-group {
             display: inline-flex;
             flex-wrap: wrap;
             white-space: nowrap;
         }
+
         .unit-group > span {
             display: inline-block;
         }
+
         @include media-breakpoint-down(sm) {
             .unit-group > .separator, .unit-group > .small-text {
                 display: block;
